Minor bugfixes and add gradient to boxes

--- a/framework/html-template/index.html
+++ b/framework/html-template/index.html
@@ -7,7 +7,9 @@
 	<title></title>
 	<meta name="description" content="">
 	<meta name="author" content="">
-
+    <style type="text/css">
+        {{css_import}}
+    </style>
 	<meta name="viewport" content="width=device-width">
 	<script src="{{app_file}}"></script>
 </head>
