Code reorganization and event handling issue fix

--- a/framework/html-template/index.html
+++ b/framework/html-template/index.html
@@ -11,7 +11,8 @@
         {{css_import}}
     </style>
 	<meta name="viewport" content="width=device-width">
-	<script src="{{app_file}}"></script>
+    <script src="third-party.js"></script>
+    <script src="{{app_file}}"></script>
 </head>
 <body>
 <div data-class="{{app_class}}" class="xComp"></div>
